Fix input alignment

--- a/less/plugins/blog/blog-search.less
+++ b/less/plugins/blog/blog-search.less
@@ -66,6 +66,9 @@
     // Form Group
 
     .form-group {
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
         margin-bottom: 0;
         &:first-child {
             -webkit-box-flex: 0;
