--- a/less/widgets/-forms.less
+++ b/less/widgets/-forms.less
@@ -75,7 +75,7 @@ input[type="password"],
 .input--single-line,
 .input--search,
 .product-filters .input--search {
-
+    min-height: 35px;
 }
 
 
